# CutPilot

./: .env.example  .flake8  .gitignore  CLAUDE.md  README.md  conductor.json  pyproject.toml
.github/workflows/: ci.yml
auto_clip/: __init__.py  __main__.py  coverage.py  cutting.py  llm.py  segment.py  topic_detection.py  transcribe.py  utils.py
tests/: __init__.py  test_cli.py  test_coverage.py  test_cutting.py  test_llm.py  test_segment.py  test_topic_detection.py  test_transcribe.py  test_utils.py
