[project]
name = "auto-clip"
version = "0.1.0"
description = "Automatically create short clips from long-form video content"
requires-python = ">=3.11"
dependencies = [
    "mlx-whisper>=0.4.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "elevenlabs>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "flake8>=7.0.0",
]

[project.scripts]
auto-clip = "auto_clip.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.coverage.run]
source = ["auto_clip"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
